--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,20 +1,36 @@
+body {
+    margin-left: 60px;
+    margin-right: 20px;
+    font-family: serif;
+}
+
 img {
     width: 100%;
 }
 
 
+
 /*-----header-----*/
+
+#main-header {
+    margin-top: 60px;
+}
+
 #logo img {
-    width: 210px;
+    max-width: 210px;
+}
+
+#site-title {
+    margin-bottom: 0;
 }
 
 #site-title a {
     font-size: 1.8rem;
     color: #1a1a1a;
+    text-decoration: none;
     font-weight: bold;
+    line-height: 1.25;
     font-family: sans-serif;
-    text-decoration:none;
-    line-height:1.25;
 }
 
 #site-title a:hover {
@@ -23,38 +39,169 @@ img {
 
 #about-site {
     color: #3c5349;
+    margin-top: 5px;
+}
+
+#header-image-container {
+    margin-top: 50px;
 }
 
 
 
 /*-----main-----*/
-#blog-header  {
-    color: #13222c;
+
+#content {
+    margin-top: 80px;
+}
+
+main {
+    width: 65%;
+    display: inline-block;
+}
+
+#blog-header {
+    margin-bottom: 50px;
+}
+
+#blog-header h1 {
     font-size: 3.2rem;
+    color: #13222c;
     font-family: sans-serif;
 }
 
+
+
+/*-----views-----*/
+
+#views {
+    margin-bottom: 3px;
+}
+
+#views img {
+    margin-left: 2px;
+    width: 18px;
+    margin-bottom: -2px;
+}
+
+#views span {
+    font-size: 1rem;
+    font-family: sans-serif;
+}
+
+
+
+/*-----blog content-----*/
+
 #blog-content {
+    display: inline-block;
+    font-size: 1.1rem;
+    word-spacing: 1px;
+    line-height: 1.4;
+    width: 70%;
+}
+
+#blog-content h4.h-style {
+    margin-bottom: 0;
+}
+
+#blog-content ol li p {
+    margin-top: 10px;
+}
+
+#blog-content .sources a {
+    text-decoration: none;
+}
+
+#blog-content .sources a:hover {
+    color: #000000;
+}
+
+
+
+/*-----aside-----*/
+
+aside {
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 3%;
+    width: 20%;
+}
+
+.widget {
+    border-top: 4px solid black;
+    line-height: 1.6;
+    font-size: 1.1rem;
+}
+
+.widget a {
+    color: #dc6520;
+}
+
+.widget a:hover {
+    color: #1a1a1a;
+}
+
+.widget .widget-title {
+    letter-spacing: 0.05rem;
+    font-size: 1.1rem;
+    word-spacing: 0.1rem;
+}
+
+input,
+textarea {
+    margin-bottom: 15px;
+    padding: 4px 10px;
+    background-color: #f7f7f7;
+    border: 1px solid #d1d1d1;
+    color: #686868;
+    display: block;
+    line-height: 1.6;
+    font-size: 1.05rem;
+    color: #000000;
+}
+
+#authorInfo{
+    width:10%;
+    vertical-align:top;
+    /* visibility: hidden; */
+}
+#authorInfo img{
+    border-radius: 50%;
+}
+
+button[type="submit"] {
+    background-color: #1a1a1a;
+    font-size: 0.9rem;
+    border-radius: 4px;
+    color: #fff;
+    letter-spacing: 0.1rem;
+    line-height: 1;
+    margin-bottom: 30px;
+    padding: 12px 18px;
+}
+input{
     width: 90%;
+    border-radius: 5px;
+}
+button[type="submit"]:hover {
+    background-color: #dc6520;
 }
 
-.h-style {
-    color: #13222c;
+#searchBox{
+    margin-top: 15px;
+    display: inline-block;
+    /* width: 70%; */
 }
-
-
-html {
-    font-size:1.1rem;
-    word-spacing:1px;
-    line-height:1.4;
+#searchButton img{
+    /* object-fit: fill; */
+    width:100% ;
 }
-.sources{
-    text-decoration:none;
+#searchButton{
+    display: inline-block;
+    margin-left: -10%;
+    width: 15%;
+    height: fit-content;
 }
-.sources:hover{
-    color:black;
+.widget a{
+    text-decoration: none;
 }
-#blog-header{
-    font-size: 3.2rem;
-}
-
