--- a/CSS/main.css
+++ b/CSS/main.css
@@ -57,6 +57,10 @@ img {
 main {
     width: 65%;
     display: inline-block;
+    margin-right: -5%;
+    vertical-align: top;
+    margin-top: -2%;
+    
 }
 
 #blog-header {
@@ -68,7 +72,18 @@ main {
     color: #13222c;
     font-family: sans-serif;
 }
-
+#author-container{
+    width:9%;
+    display: inline-block;
+    margin-right:15%;
+    text-align: left;
+    vertical-align:top;
+    /* visibility: hidden; */
+}
+#author-container img{
+    width:75%;
+    border-radius: 50%;
+}
 
 
 /*-----views-----*/
@@ -97,7 +112,7 @@ main {
     font-size: 1.1rem;
     word-spacing: 1px;
     line-height: 1.4;
-    width: 70%;
+    width: 75%;
 }
 
 #blog-content h4.h-style {
@@ -123,9 +138,10 @@ main {
 aside {
     display: inline-block;
     vertical-align: top;
-    margin-left: 3%;
+    margin-left: 14%;
     width: 20%;
 }
+
 
 .widget {
     border-top: 4px solid black;
@@ -141,12 +157,18 @@ aside {
     color: #1a1a1a;
 }
 
+
 .widget .widget-title {
     letter-spacing: 0.05rem;
-    font-size: 1.1rem;
+    font-size: 1.6rem;
     word-spacing: 0.1rem;
+    font-weight: bolder;
+    line-height: 2rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
+.widget p,.widget li{
+    font-weight: 600;
+}
 input,
 textarea {
     margin-bottom: 15px;
@@ -160,14 +182,7 @@ textarea {
     color: #000000;
 }
 
-#authorInfo{
-    width:10%;
-    vertical-align:top;
-    /* visibility: hidden; */
-}
-#authorInfo img{
-    border-radius: 50%;
-}
+
 
 button[type="submit"] {
     background-color: #1a1a1a;
@@ -193,8 +208,9 @@ button[type="submit"]:hover {
     /* width: 70%; */
 }
 #searchButton img{
-    /* object-fit: fill; */
-    width:100% ;
+    width:500% ;
+    align-items: center;
+    margin-left: -5px;
 }
 #searchButton{
     display: inline-block;
