--- a/CSS/Answers/main.css
+++ b/CSS/Answers/main.css
@@ -52,17 +52,12 @@ img {
 
 #content {
     margin-top: 80px;
-    width: 100%;
-    height:100%;
     border: 1px solid black;
 }
 
 main {
     width: 70%;
     display: inline-block;
-    /* margin-right: -5%; */
-    /* margin-top: -2%; */
-    
 }
 
 #blog-header {
@@ -74,21 +69,47 @@ main {
     color: #13222c;
     font-family: sans-serif;
 }
-#author-container{
-    width:6%;
+
+
+
+/*-----author container-----*/
+
+#author-container {
     display: inline-block;
-    margin-right:6%;
-    text-align: left;
-    vertical-align:top;
-    font-family: sans-serif;
+    width: 29%;
     margin-bottom: 30px;
-    /* visibility: hidden; */
+    vertical-align: top;
+    font-family: sans-serif;
     font-size: 1rem;
 }
-#author-container img{
-    width:75%;
+
+#author-img {
+    max-width: 60px;
     border-radius: 50%;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    vertical-align: middle;
 }
+
+#author-name {
+    display: block;
+    margin-bottom: 1rem;
+}
+
+#author-container .slash {
+    display: none;
+}
+
+#author-container a {
+    color: #3c5349;
+    text-decoration: none;
+}
+
+#author-container a:hover {
+    color: #dc6520;
+    text-decoration: underline;
+}
+
 
 
 /*-----views-----*/
@@ -117,7 +138,7 @@ main {
     font-size: 1.1rem;
     word-spacing: 1px;
     line-height: 1.4;
-    width: 75%;
+    width: 70%;
 }
 
 #blog-content h4.h-style {
@@ -143,12 +164,12 @@ main {
 aside {
     display: inline-block;
     vertical-align: top;
-    width: 20%;
+    margin-left: 3%;
+    width: 25%;
 }
 
-
 .widget {
-    width: 100%;
+    margin-top: 3.5rem;
     border-top: 4px solid black;
     line-height: 1.6;
     font-size: 1.1rem;
@@ -156,73 +177,105 @@ aside {
 
 .widget a {
     color: #dc6520;
+    text-decoration: none;
 }
 
 .widget a:hover {
     color: #1a1a1a;
 }
 
-
 .widget .widget-title {
+    text-transform: uppercase;
+    font-family: sans-serif;
+    line-height: 1.4;
     letter-spacing: 0.05rem;
-    font-size: 1.6rem;
+    font-size: 1.1rem;
     word-spacing: 0.1rem;
-    font-weight: bolder;
-    line-height: 2rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.widget p,.widget li{
-    font-weight: 600;
+
+.widget li {
+    margin-bottom: 0.25rem;
 }
+
+.widget p {
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+label {
+    color: #3c5349;
+    padding-bottom: 3px;
+    display: block;
+    font-size: 1rem;
+}
+
 input,
 textarea {
     margin-bottom: 15px;
     padding: 4px 10px;
     background-color: #f7f7f7;
     border: 1px solid #d1d1d1;
+    border-radius: 2px;
     color: #686868;
+    width: 90%;
     display: block;
     line-height: 1.6;
     font-size: 1.05rem;
     color: #000000;
 }
 
-
-
 button[type="submit"] {
     background-color: #1a1a1a;
     font-size: 0.9rem;
+    border: none;
     border-radius: 4px;
     color: #fff;
     letter-spacing: 0.1rem;
     line-height: 1;
-    margin-bottom: 30px;
     padding: 12px 18px;
+    text-transform: uppercase;
 }
-input{
-    width: 90%;
-    border-radius: 5px;
-}
+
 button[type="submit"]:hover {
     background-color: #dc6520;
 }
 
-#searchBox{
-    margin-top: 15px;
-    display: inline-block;
-    /* width: 70%; */
+#subscription .sub-btn {
+    margin: 10px 0 0;
 }
-#searchButton img{
-    width:500% ;
-    align-items: center;
-    margin-left: -5px;
+
+#search form {
+    margin-top: 30px;
+    margin-bottom: 70px;
 }
-#searchButton{
-    display: inline-block;
-    margin-left: -10%;
-    width: 15%;
-    height: fit-content;
+
+#search input {
+    display: inline;
+    width: 80%;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    margin-bottom: 0;
 }
-.widget a{
-    text-decoration: none;
+
+#search img {
+    width: 18px;
+    vertical-align: middle
+}
+
+#search button {
+    width: 12%;
+    margin-left: -4px;
+    padding: 7px 0 6px;
+    border-radius: 0 5px 5px 0;
+    line-height: 1.6;
+}
+
+#recent-posts li,
+#recent-comments li {
+    margin-bottom: 0.4rem;
+}
+
+#recent-comments .name {
+    text-transform: uppercase;
+    font-size: 1rem;
 }
