--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,228 +1,215 @@
 body {
-    margin-left: 60px;
-    margin-right: 20px;
-    font-family: serif;
+  margin-left: 60px;
+  margin-right: 20px;
+  font-family: serif;
 }
 
 img {
-    width: 100%;
+  width: 100%;
 }
-
-
 
 /*-----header-----*/
 
 #main-header {
-    margin-top: 60px;
+  margin-top: 60px;
 }
 
 #logo img {
-    max-width: 210px;
+  max-width: 210px;
 }
 
 #site-title {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 #site-title a {
-    font-size: 1.8rem;
-    color: #1a1a1a;
-    text-decoration: none;
-    font-weight: bold;
-    line-height: 1.25;
-    font-family: sans-serif;
+  font-size: 1.8rem;
+  color: #1a1a1a;
+  text-decoration: none;
+  font-weight: bold;
+  line-height: 1.25;
+  font-family: sans-serif;
 }
 
 #site-title a:hover {
-    color: #dc6520;
+  color: #dc6520;
 }
 
 #about-site {
-    color: #3c5349;
-    margin-top: 5px;
+  color: #3c5349;
+  margin-top: 5px;
 }
 
 #header-image-container {
-    margin-top: 50px;
+  margin-top: 50px;
 }
-
-
 
 /*-----main-----*/
 
 #content {
-    margin-top: 80px;
-    width: 100%;
-    height:100%;
-    border: 1px solid black;
+  margin-top: 80px;
+  width: 100%;
+  height: 100%;
+  border: 1px solid black;
 }
 
 main {
-    width: 70%;
-    display: inline-block;
-    /* margin-right: -5%; */
-    /* margin-top: -2%; */
-    
+  width: 70%;
+  display: inline-block;
+  /* margin-right: -5%; */
+  /* margin-top: -2%; */
 }
 
 #blog-header {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 #blog-header h1 {
-    font-size: 3.2rem;
-    color: #13222c;
-    font-family: sans-serif;
+  font-size: 3.2rem;
+  color: #13222c;
+  font-family: sans-serif;
 }
-#author-container{
-    width:6%;
-    display: inline-block;
-    margin-right:6%;
-    text-align: left;
-    vertical-align:top;
-    font-family: sans-serif;
-    margin-bottom: 30px;
-    /* visibility: hidden; */
-    font-size: 1rem;
+#author-container {
+  width: 6%;
+  display: inline-block;
+  margin-right: 6%;
+  text-align: left;
+  vertical-align: top;
+  font-family: sans-serif;
+  margin-bottom: 30px;
+  /* visibility: hidden; */
+  font-size: 1rem;
 }
-#author-container img{
-    width:75%;
-    border-radius: 50%;
+#author-container img {
+  width: 75%;
+  border-radius: 50%;
 }
-
 
 /*-----views-----*/
 
 #views {
-    margin-bottom: 3px;
+  margin-bottom: 3px;
 }
 
 #views img {
-    margin-left: 2px;
-    width: 18px;
-    margin-bottom: -2px;
+  margin-left: 2px;
+  width: 18px;
+  margin-bottom: -2px;
 }
 
 #views span {
-    font-size: 1rem;
-    font-family: sans-serif;
+  font-size: 1rem;
+  font-family: sans-serif;
 }
-
-
 
 /*-----blog content-----*/
 
 #blog-content {
-    display: inline-block;
-    font-size: 1.1rem;
-    word-spacing: 1px;
-    line-height: 1.4;
-    width: 75%;
+  display: inline-block;
+  font-size: 1.1rem;
+  word-spacing: 1px;
+  line-height: 1.4;
+  width: 75%;
 }
 
 #blog-content h4.h-style {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 
 #blog-content ol li p {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 #blog-content .sources a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #blog-content .sources a:hover {
-    color: #000000;
+  color: #000000;
 }
-
-
 
 /*-----aside-----*/
 
 aside {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
+  display: inline-block;
+  vertical-align: top;
+  width: 20%;
 }
 
-
 .widget {
-    width: 100%;
-    border-top: 4px solid black;
-    line-height: 1.6;
-    font-size: 1.1rem;
+  width: 100%;
+  border-top: 4px solid black;
+  line-height: 1.6;
+  font-size: 1.1rem;
 }
 
 .widget a {
-    color: #dc6520;
+  color: #dc6520;
 }
 
 .widget a:hover {
-    color: #1a1a1a;
+  color: #1a1a1a;
 }
-
 
 .widget .widget-title {
-    letter-spacing: 0.05rem;
-    font-size: 1.6rem;
-    word-spacing: 0.1rem;
-    font-weight: bolder;
-    line-height: 2rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  letter-spacing: 0.05rem;
+  font-size: 1.6rem;
+  word-spacing: 0.1rem;
+  font-weight: bolder;
+  line-height: 2rem;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-.widget p,.widget li{
-    font-weight: 600;
+.widget p,
+.widget li {
+  font-weight: 600;
 }
 input,
 textarea {
-    margin-bottom: 15px;
-    padding: 4px 10px;
-    background-color: #f7f7f7;
-    border: 1px solid #d1d1d1;
-    color: #686868;
-    display: block;
-    line-height: 1.6;
-    font-size: 1.05rem;
-    color: #000000;
+  margin-bottom: 15px;
+  padding: 4px 10px;
+  background-color: #f7f7f7;
+  border: 1px solid #d1d1d1;
+  color: #686868;
+  display: block;
+  line-height: 1.6;
+  font-size: 1.05rem;
+  color: #000000;
 }
-
-
 
 button[type="submit"] {
-    background-color: #1a1a1a;
-    font-size: 0.9rem;
-    border-radius: 4px;
-    color: #fff;
-    letter-spacing: 0.1rem;
-    line-height: 1;
-    margin-bottom: 30px;
-    padding: 12px 18px;
+  background-color: #1a1a1a;
+  font-size: 0.9rem;
+  border-radius: 4px;
+  color: #fff;
+  letter-spacing: 0.1rem;
+  line-height: 1;
+  margin-bottom: 30px;
+  padding: 12px 18px;
 }
-input{
-    width: 90%;
-    border-radius: 5px;
+input {
+  width: 90%;
+  border-radius: 5px;
 }
 button[type="submit"]:hover {
-    background-color: #dc6520;
+  background-color: #dc6520;
 }
 
-#searchBox{
-    margin-top: 15px;
-    display: inline-block;
-    /* width: 70%; */
+#searchBox {
+  margin-top: 15px;
+  display: inline-block;
+  /* width: 70%; */
 }
-#searchButton img{
-    width:500% ;
-    align-items: center;
-    margin-left: -5px;
+#searchButton img {
+  width: 500%;
+  align-items: center;
+  margin-left: -5px;
 }
-#searchButton{
-    display: inline-block;
-    margin-left: -10%;
-    width: 15%;
-    height: fit-content;
+#searchButton {
+  display: inline-block;
+  margin-left: -10%;
+  width: 15%;
+  height: fit-content;
 }
-.widget a{
-    text-decoration: none;
+.widget a {
+  text-decoration: none;
 }
